--- a/paint-JS/style.css
+++ b/paint-JS/style.css
@@ -1,9 +1,14 @@
+h1 {
+    text-align: center;
+}
 .container {
+    height: 90vh;
+    width: 100%;
     background-color: black;
-    width: 1vw;
-    height: 0.8vh;
 }
 .white-board {
-    width: 0.8vw;
-    height: 90%;
+    width: 90%;
+    height: 100%;
+    background-color: aqua;
+    float: right;
 }
