--- a/paint-JS/style.css
+++ b/paint-JS/style.css
@@ -12,3 +12,11 @@ h1 {
     background-color: aqua;
     float: right;
 }
+
+.p1 {
+    background-color: rgb(255, 255, 255);
+    width: 5px;
+    height: 5px;
+    position: absolute;
+    border-radius: 2px;
+}
