--- a/paint-JS/style.css
+++ b/paint-JS/style.css
@@ -5,10 +5,12 @@ h1 {
     height: 500px;
     width: 100%;
     background-color: black;
+    display: flex;
+    flex-direction: row;
 }
 .white-board {
     width: 90%;
-    height: 100%;
+    height: 500px;
     background-color: aqua;
     float: right;
 }
@@ -23,5 +25,51 @@ h1 {
 .palet {
     width: 10%;
     height: 100%;
-    background-color: brown;
+    background-color: rgb(255, 255, 255);
+    display: flex;
+    flex-flow: row wrap ;
+    /* align-content: space-between; */
 }
+.red {
+    background-color: red;
+    width: 30px;
+    height: 30px;
+    border: 2px black solid;
+    margin: 5px;
+}
+.green {
+    background-color: green;
+    width: 30px;
+    height: 30px;
+    border: 2px black solid;
+    margin: 5px;
+}
+.green {
+    background-color: green;
+    width: 30px;
+    height: 30px;
+    border: 2px black solid;
+    margin: 5px;
+}
+.blue {
+    background-color: blue;
+    width: 30px;
+    height: 30px;
+    border: 2px black solid;
+    margin: 5px;
+}
+.white {
+    background-color: white;
+    width: 30px;
+    height: 30px;
+    border: 2px black solid;
+    margin: 5px;
+}
+.black {
+    background-color: black;
+    width: 30px;
+    height: 30px;
+    border: 2px black solid;
+    margin: 5px;
+}
+
