--- a/paint-JS/style.css
+++ b/paint-JS/style.css
@@ -11,8 +11,9 @@ h1 {
 .white-board {
     width: 90%;
     height: 500px;
-    background-color: rgb(61, 161, 161);
+    background-color: rgb(255, 255, 255);
     float: right;
+    border: 3px solid black;
 }
 
 .p1 {
@@ -37,7 +38,7 @@ h1 {
     border: 2px black solid;
     margin: 5px;
 }
-.red {
+/* .red {
     background-color: red;
     width: 30px;
     height: 30px;
@@ -78,5 +79,17 @@ h1 {
     height: 30px;
     border: 2px black solid;
     margin: 5px;
+} */
+
+.reset-color {
+    /* align-self: flex-start; */
+    width: 100%;
+    height: 40px;
+    background-color: black;
+    margin: 6px;
+    color: white;text-align: center;
 }
 
+footer p {
+    text-align: center;
+}
