--- a/paint-JS/style.css
+++ b/paint-JS/style.css
@@ -83,11 +83,14 @@ h1 {
 
 .reset-color {
     /* align-self: flex-start; */
-    width: 100%;
+    width: 90%;
     height: 40px;
     background-color: black;
-    margin: 6px;
+    /* margin: 6px; */
+    margin-left: auto;
+    margin-right: auto;
     color: white;text-align: center;
+
 }
 
 footer p {
