--- a/paint-JS/style.css
+++ b/paint-JS/style.css
@@ -21,7 +21,7 @@ h1 {
     width: 5px;
     height: 5px;
     position: absolute;
-    border-radius: 2px;
+    border-radius: 3px;
 }
 .palet {
     width: 10%;
@@ -90,6 +90,17 @@ h1 {
     margin-left: auto;
     margin-right: auto;
     color: white;text-align: center;
+
+}
+.reset-board {
+    /* align-self: flex-start; */
+    width: 90%;
+    height: 40px;
+    background-color: rgb(255, 255, 255);
+    /* margin: 6px; */
+    margin-left: auto;
+    margin-right: auto;
+    color: rgb(0, 0, 0);text-align: center;
 
 }
 
