--- a/paint-JS/style.css
+++ b/paint-JS/style.css
@@ -103,6 +103,16 @@ h1 {
     color: rgb(0, 0, 0);text-align: center;
 
 }
+.background-board {
+    /* align-self: flex-start; */
+    width: 90%;
+    height: 40px;
+    background-color: rgb(255, 255, 255);
+    /* margin: 6px; */
+    margin-left: auto;
+    margin-right: auto;
+    color: rgb(0, 0, 0);text-align: center;
+}
 
 footer p {
     text-align: center;
