--- a/paint-JS/style.css
+++ b/paint-JS/style.css
@@ -14,6 +14,7 @@ h1 {
     background-color: rgb(255, 255, 255);
     float: right;
     border: 3px solid black;
+    transition: all ease 1s;
 }
 
 .p1 {
@@ -37,6 +38,7 @@ h1 {
     height: 30px;
     border: 2px black solid;
     margin: 5px;
+    transition: all ease 0.5s;
 }
 /* .red {
     background-color: red;
