--- a/paint-JS/style.css
+++ b/paint-JS/style.css
@@ -18,7 +18,7 @@ h1 {
 }
 
 .p1 {
-    /* background: rgb(255, 255, 255); */
+    /* background-color: black; */
     width: 5px;
     height: 5px;
     position: absolute;
