--- a/paint-JS/style.css
+++ b/paint-JS/style.css
@@ -30,6 +30,7 @@ h1 {
     background-color: rgb(255, 255, 255);
     display: flex;
     flex-flow: row wrap ;
+    position: relative;
     /* align-content: space-between; */
 }
 .color {
@@ -102,8 +103,21 @@ h1 {
     /* margin: 6px; */
     margin-left: auto;
     margin-right: auto;
-    color: rgb(0, 0, 0);text-align: center;
-
+    color: rgb(0, 0, 0);
+    text-align: center;
+}
+.eraser{
+    /* align-self: flex-start; */
+    width: 90%;
+    height: 40px;
+    background-color: rgb(255, 255, 255);
+    /* margin: 6px; */
+    margin-left: auto;
+    margin-right: auto;
+    color: rgb(255, 0, 0);
+    text-align: center;
+    /* position: absolute;
+    top: 0px; */
 }
 .background-board {
     /* align-self: flex-start; */
@@ -113,7 +127,8 @@ h1 {
     /* margin: 6px; */
     margin-left: auto;
     margin-right: auto;
-    color: rgb(0, 0, 0);text-align: center;
+    color: rgb(0, 0, 0);
+    text-align: center;
 }
 
 footer p {
